--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,26 @@
 
 /* About Page */
 .aboutme-container{
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
 }
 .image-container{
-
+  border: 1px solid black;
+  height: 15em;
+  width: 15em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: black;
+}
+.image-container > img{
+  border: 1px solid black;
+  border-radius: 50%;
+  
 }
 .details{
 
@@ -29,10 +45,22 @@
   margin: 20px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   border-radius: 10px;
-  height: 40em;
+  height: 35em;
   width: 30em;
-
-
+  
+  
 }
-
+.project-container > h1{
+  font-size: 20px;
+}
+.project-container > img {
+  height: 30em;
+  width: 30em;
+  border: 1px solid black;
+}
+.button-container{
+  display: flex;
+}
